fixed build errors

--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -8,33 +8,69 @@ date: "2024-08-15"
 link: "https://lilianzlettuce.github.io/ad417/"
 ---
 
-# Atrophy: Graveyard of My Fallen Heroes
+<ProjectHeader
+  title="Atrophy: Graveyard of My Fallen Heroes"
+  description="An immersive WebVR experience exploring decay, memory, and transformation in interactive 3D."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["VR", "WebVR", "Interactive Art", "3D Graphics", "Immersive Experience", "Creative Coding", "Digital Art"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Date", values: ["2024-08-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-An immersive virtual reality experience that explores themes of decay, memory, and the passage of time through interactive 3D environments.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Atrophy: Graveyard of My Fallen Heroes
 
-## Overview
+    <div className="text-lg">
+      An immersive virtual reality experience that explores themes of decay, memory, and the passage of time through interactive 3D environments.
+    </div>
 
-This project creates an interactive VR environment that simulates the decay of the self, offering users a unique perspective on mortality and transformation. The experience is accessible online through web browsers, making it widely available.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project creates an interactive VR environment that simulates the decay of the self, offering users a unique perspective on mortality and transformation. The experience is accessible online through web browsers, making it widely available.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **WebVR Integration**: Accessible through standard web browsers
-- **Interactive 3D Environment**: Immersive virtual space for exploration
-- **Decay Simulation**: Visual representation of transformation over time
-- **Cross-Platform**: Works on desktop and mobile devices
-- **Performance Optimized**: Smooth experience across different hardware
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **WebVR Integration**: Accessible through standard web browsers
+    - **Interactive 3D Environment**: Immersive virtual space for exploration
+    - **Decay Simulation**: Visual representation of transformation over time
+    - **Cross-Platform**: Works on desktop and mobile devices
+    - **Performance Optimized**: Smooth experience across different hardware
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with WebGL and WebVR technologies to create an accessible yet immersive experience that doesn't require specialized hardware.
+    #### Technical Implementation
+    Built with WebGL and WebVR technologies to create an accessible yet immersive experience that doesn't require specialized hardware.
 
-## Artistic Vision
+    <br/><br/><br/>
 
-The project explores deep philosophical themes through digital art, creating a space for reflection on identity, memory, and the inevitable changes we all face.
+    #### Artistic Vision
+    The project explores deep philosophical themes through digital art, creating a space for reflection on identity, memory, and the inevitable changes we all face.
 
-## Future Development
+    <br/><br/><br/>
 
-- Enhanced visual effects and particle systems
-- Multi-user interaction capabilities
-- Audio-reactive elements
-- Expanded narrative content 
+    #### Future Development
+    - Enhanced visual effects and particle systems
+    - Multi-user interaction capabilities
+    - Audio-reactive elements
+    - Expanded narrative content
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
