updated image paths

--- a/content/projects/atrophy-graveyard.mdx
+++ b/content/projects/atrophy-graveyard.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Atrophy: Graveyard of My Fallen Heroes"
 description: "Interactive VR environment simulating the decay of the self. Accessible online via web."
-image: "/img/atrophypic1.png"
+image: "/projects/atrophy/1.png"
 tags: ["VR", "WebVR", "Interactive Art", "3D Graphics", "Immersive Experience", "Creative Coding", "Digital Art"]
 categories: ["dev", "art"]
 date: "2024-08-15"
