--- a/content/projects/cero.mdx
+++ b/content/projects/cero.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Cero"
 description: "Adventure/platformer game developed with Javascript using the melonJS game engine."
-image: "/img/ceropic1.png"
+image: "/projects/cero/1.png"
 tags: ["JavaScript", "Game Development", "melonJS", "Platformer", "Adventure Game", "Web Games", "2D Graphics"]
 categories: ["dev", "art"]
 date: "2021-06-15"
