--- a/content/projects/ml-hacks.mdx
+++ b/content/projects/ml-hacks.mdx
@@ -1,7 +1,7 @@
 ---
 title: "ML Hacks"
 description: "Website for ML Hacks, Bay Area's premier Machine Learning focused hackathon for female and nonbinary high school students."
-image: "/img/mlhackspic1.png"
+image: "/projects/ml-hacks/1.png"
 tags: ["Hackathon", "Web Development", "Machine Learning"]
 categories: ["dev", "design"]
 date: "2022-03-15"
