--- a/content/projects/space-guy.mdx
+++ b/content/projects/space-guy.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Space Guy"
 description: "2D space-themed platformer created with a team of 5 using Unity."
-image: "/img/spaceguypic2.png"
+image: "/projects/space-guy/2.png"
 tags: ["Unity", "Game Development", "2D Platformer", "C#"]
 categories: ["dev", "art"]
 date: "2020-08-15"
