--- a/content/projects/wooden-toy.mdx
+++ b/content/projects/wooden-toy.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Wooden Toy"
 description: "Pacman themed wooden toy with laser-cut interactive parts. Designed and modeled with Autodesk Inventor."
-image: "/img/wooden-toy.png"
+image: "/projects/wooden-toy/wooden-toy.png"
 tags: ["Autodesk Inventor", "Laser Cutting", "Woodworking", "Pacman", "Interactive Design", "Physical Prototyping"]
 categories: ["fabrication", "design"]
 date: "2020-03-15"
