--- a/content/projects/2048.mdx
+++ b/content/projects/2048.mdx
@@ -1,7 +1,7 @@
 ---
 title: "2048"
 description: "Browser-based version of the classic 2048 game built with Javascript and HTML/CSS to include original styling and various themes."
-image: "/img/2048pic1.png"
+image: "/projects/2048/1.png"
 tags: ["JavaScript", "HTML", "CSS", "Game Development", "Puzzle Game", "Web Games", "Classic Games"]
 categories: ["dev", "design"]
 date: "2020-07-15"
