--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Becoming"
 description: "Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
-image: "/img/becoming1.jpg"
+image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
 categories: ["dev", "art"]
 date: "2025-05-01"
