--- a/content/projects/bloog.mdx
+++ b/content/projects/bloog.mdx
@@ -1,7 +1,7 @@
 ---
 title: "BLOOG"
 description: "Notecard web app built with React, Redux, & Firebase. (Basically knockoff quizlet)."
-image: "/img/bloogpic1.png"
+image: "/projects/bloog/1.png"
 tags: ["React", "Redux", "Firebase", "Study Tool", "Web App"]
 categories: ["dev", "design"]
 date: "2021-05-15"
