--- a/content/projects/chipin.mdx
+++ b/content/projects/chipin.mdx
@@ -1,7 +1,7 @@
 ---
 title: "ChipIn"
 description: "Household management app that streamlines shared inventory tracking, expense splitting, AI-optimized meal ideas, and other collaborative tools. Built with a group of 4 for Software Engineering I."
-image: "/img/chipin1.png"
+image: "/projects/chipin/1.png"
 tags: ["React", "Node.JS", "AI", "MongoDB"]
 categories: ["dev", "design"]
 date: "2024-07-20"
