--- a/content/projects/escape-room.mdx
+++ b/content/projects/escape-room.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Escape Room"
 description: "Online escape room featuring the nonsensical \"logic\" puzzles of my deranged high-schooler mind."
-image: "/img/escaperoompic1.png"
+image: "/projects/escape/1.png"
 tags: ["JavaScript", "HTML", "CSS", "Puzzle Game", "Escape Room", "Interactive Story", "Web Games"]
 categories: ["dev", "design"]
 date: "2020-12-15"
