--- a/content/projects/linescape.mdx
+++ b/content/projects/linescape.mdx
@@ -1,7 +1,7 @@
 ---
 title: "LineScape"
 description: "SVG drawing tool designed to simplify the process of creating line animations for websites."
-image: "/img/linescapepic1.png"
+image: "/projects/linescape/1.png"
 tags: ["SVG", "Animation", "Drawing Tool", "Web Development", "Creative Coding", "Design Tools"]
 categories: ["dev", "design"]
 date: "2021-04-15"
