--- a/content/projects/snowball.mdx
+++ b/content/projects/snowball.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Snowball"
 description: "Crowdfunding Android app created to maximize the impact of individual donations by taking advantage of corporate matching programs."
-image: "/img/snowballpic1.png"
+image: "/projects/snowball/1.png"
 tags: ["Android", "Java", "Mobile App", "Social Impact", "Corporate Matching"]
 categories: ["dev", "design"]
 date: "2020-10-15"
