--- a/content/projects/veracity.mdx
+++ b/content/projects/veracity.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Veracity"
 description: "Interface for charity searching web app. No longer running due to API restrictions."
-image: "/img/veracitypic3.png"
+image: "/projects/veracity/3.png"
 tags: ["React", "Charity", "Web App", "API Integration", "Search Interface", "Social Impact"]
 categories: ["dev", "design"]
 date: "2020-11-15"
