--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Purdue Hackers - Landing Page"
 description: "Central site for Purdue Hackers, a student organization of more than 1000 members who build & ship kick-ass creative projects."
-image: "/projects/purdue-hackers/invitation_desktop.png"
+image: "/projects/purdue-hackers/invitation_desktop.webp"
 tags: ["Next.js", "React", "Student Organization", "Landing Page", "Web Development"]
 categories: ["dev", "design"]
 date: "2022-12-01"
