made mdxImage component more reusable, set srcset sizes presets and aspect ratio defaults

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -64,22 +64,26 @@ link: "https://www.purduehackers.com/"
       preset="project-documentation"
     />
 
-    <MDXImageFillAspectRatio 
+    #### test known dimensions
+    <MDXImage
+      src="/projects/purdue-hackers/hero_mac-air.webp" 
+      alt="Hero screenshot" 
+      preset="project-documentation"
+      width={2560}
+      height={1664}
+    />
+
+    <MDXImage 
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
     />
 
-    <MDXImageFillAspectRatio 
+    <MDXImage
       src="/projects/purdue-hackers/hack-night_mac-air.webp" 
       alt="Hack night" 
-      preset="hero"
-    />
-
-    <MDXImageFillAspectRatio 
-      src="/projects/purdue-hackers/hero.webp" 
-      alt="Hero" 
       preset="project-documentation"
+      aspectRatio="2/3"
     />
 
     <br/><br/><br/>
