finished image frame for mdx components, added header sizes preset for optimizing with responsive sizing

--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -8,6 +8,15 @@ date: "2022-12-01"
 link: "https://www.purduehackers.com/"
 ---
 
+<MDXImage
+  src="/projects/purdue-hackers/hero_mac-air.webp" 
+  alt="Hero screenshot" 
+  preset="header"
+  width={2560}
+  height={1664}
+  frame="mockup"
+/>
+
 <ProjectHeader
   title="Purdue Hackers - Landing Page"
   description="Landing site for Purdue Hackers, showcasing mission, events, and community."
@@ -58,13 +67,6 @@ link: "https://www.purduehackers.com/"
     <br/><br/><br/>
 
     #### Visuals
-    <MDXImageFillAspectRatio 
-      src="/projects/purdue-hackers/hero_mac-air.webp" 
-      alt="Hero screenshot" 
-      preset="project-documentation"
-    />
-
-    #### test known dimensions
     <MDXImage
       src="/projects/purdue-hackers/hero_mac-air.webp" 
       alt="Hero screenshot" 
@@ -77,6 +79,7 @@ link: "https://www.purduehackers.com/"
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
+      frame="mockup"
     />
 
     <MDXImage
@@ -84,6 +87,7 @@ link: "https://www.purduehackers.com/"
       alt="Hack night" 
       preset="project-documentation"
       aspectRatio="2/3"
+      frame="rgb(233, 233, 233)"
     />
 
     <br/><br/><br/>
@@ -103,7 +107,7 @@ link: "https://www.purduehackers.com/"
     - Lofi/Hifi prototypes with Figma
     - Technical implementation and iterations
 
-    <MDXImageFillAspectRatio 
+    <MDXImage
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
