--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -8,6 +8,24 @@ date: "2024-11-15"
 link: "https://www.scoutforschools.com/"
 ---
 
+<MDXImage 
+  src="/projects/scout/hero_mac-air.webp" 
+  alt="Hero" 
+  preset="header"
+  width={2560}
+  height={1664}
+  frame="mockup"
+/>
+
+<MDXImage 
+  src="/projects/scout/hero_mac-air.webp" 
+  alt="Hero" 
+  preset="hero"
+  width={2560}
+  height={1664}
+  frame="none"
+/>
+
 <ProjectHeader
   title="Scout"
   description="A dynamic, responsive landing page for Scout, a YC-backed startup, focused on exceptional user experience. Implemented site from scratch based off of existing UI prototypes using modern web stack, created responsive UX and animations building on design language and assets."
