added mdx list item, removed unused components

--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -43,7 +43,7 @@ link: "https://www.scoutforschools.com/"
       width={593}
       height={574}
       frame="none"
-      className="w-full my-10"
+      className="w-full"
     />
   </SectionColumn>
   <SectionColumn size={5}>
@@ -54,7 +54,7 @@ link: "https://www.scoutforschools.com/"
       width={593}
       height={574}
       frame="none"
-      className="w-full my-10"
+      className="w-full"
     />
   </SectionColumn>
   <SectionColumn size={0}>
@@ -69,26 +69,32 @@ link: "https://www.scoutforschools.com/"
     #### Scout is a YC-backed startup building an AI-powered student information system to automate administrative tasks for schools.
 
     <div className="text-lg">
-      The company had recently pivoted, and decided they wanted a custom-coded landing page to replace their Wordpress site.
-
-      Given existing UI prototypes from a designer, I was tasked with building a landing page from scratch. 
+      The company had recently pivoted, and wanted a custom-coded landing page to launch their product.
+      Given existing UI prototypes from a designer, I was tasked with building a the site from scratch. 
       The implementation focused on delivering a seamless user experience with modern animations and responsive design.
     </div>
 
     <br/><br/><br/>
 
     #### The Challenge
-    The previous landing page featured the most up-to-date content about the company, but was built using stock graphics on a site-builder. 
-    Conversely, the new UI prototypes provided by the designer did not entirely cover the most updated content.
+
+    The company's existing landing page featured the most up-to-date information on product details, but was built using stock graphics on a site-builder. 
+    Conversely, the new UI prototypes provided by the designer did not effectively convey the most updated content.
 
     <br/><br/><br/>
 
     #### Goals
-    → Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does
-    
-    → Incorporate existing designs, taking creative liberties to implement new content in the same design language
-    
-    → Create new components, interactions, and assets to create a seamless user experience while maintaining visual cohesion  
+    <ProjectListItem>
+      Build a new site landing page that reflects Scout’s playful visual identity while effectively communicating what the company does
+    </ProjectListItem>
+
+    <ProjectListItem>
+      Incorporate and build on existing designs, taking creative liberties to implement new content in the same design language
+    </ProjectListItem>
+
+    <ProjectListItem>
+      Create new components, interactions, and animations while maintaining visual cohesion to create a seamless user experience 
+    </ProjectListItem>
   </SectionColumn>
   <SectionColumn size={2}>
   </SectionColumn>
