added and compressed more photos, started writining another project doc

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -5,7 +5,6 @@ image: "/projects/becoming/1.jpg"
 tags: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"]
 categories: ["dev", "art"]
 date: "2025-05-01"
-featured: true
 award: "Performance @ The International Conference on New Interfaces for Musical Expression (NIME)"
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
@@ -18,9 +17,6 @@ link: "https://youtu.be/WGYg-UNLEUU"
     items={[
       { label: "Tags", values: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"] },
       { label: "Categories", values: ["dev", "art"] },
-      { label: "Date", values: ["2025-05-01"] },
-      { label: "Award", values: ["Performance @ NIME"] },
-      { label: "Featured", values: ["true"] },
       { label: "Role", values: ["Artist", "Developer"] },
       { label: "Timeline", values: ["August 2024 - May 2025"] },
       { label: "Team", values: ["Solo project"] },
@@ -28,6 +24,94 @@ link: "https://youtu.be/WGYg-UNLEUU"
     ]}
   />
 </ProjectHeader>
+
+Concept → Context → Work Presentation
+
+<SplitSection>
+  <SectionColumn size={3}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Becoming
+
+    <div className="text-lg">
+      An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
+    </div>
+
+    <br/><br/><br/>
+
+    <MDXImage 
+      src="/projects/becoming/projection-1.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5"
+    />
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection>
+  <SectionColumn size={1}>
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/projection-2.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5"
+    />
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/projection-3.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5"
+    />
+  </SectionColumn>
+  <SectionColumn size={1}>
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection>
+  <SectionColumn size={3}>
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/projection-2.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5 my-10"
+    />
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/projection-3.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-4/5 my-10"
+    />
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
 
 <SplitSection>
   <SectionColumn size={4}>
