--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -155,7 +155,7 @@ link: "https://www.scoutforschools.com/"
       width={1603}
       height={2839}
       frame="none"
-      className="w-full my-10"
+      className="w-full my-0"
     />
   </SectionColumn>
   <SectionColumn size={5}>
@@ -166,7 +166,7 @@ link: "https://www.scoutforschools.com/"
       width={1603}
       height={2839}
       frame="none"
-      className="w-full my-10"
+      className="w-full my-0"
     />
   </SectionColumn>
   <SectionColumn size={5}>
@@ -177,7 +177,7 @@ link: "https://www.scoutforschools.com/"
       width={1603}
       height={2839}
       frame="none"
-      className="w-full my-10"
+      className="w-full my-0"
     />
   </SectionColumn>
   <SectionColumn size={0}>
@@ -202,9 +202,9 @@ link: "https://www.scoutforschools.com/"
       preset="header"
       width={2560}
       height={3600}
-      frame="rgb(50, 50, 50)"
+      frame="none"
       className=""
-      baseImageClassName="rounded-xl"
+      baseImageClassName="rounded-none"
     />
 
     <MDXImage 
