edited splitSection to accept className, mdx file

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -94,7 +94,7 @@ Concept → Context → Work Presentation
       width={3754}
       height={2835}
       frame="none"
-      className="w-4/5 my-10"
+      className="w-full"
     />
   </SectionColumn>
   <SectionColumn size={6}>
@@ -105,13 +105,59 @@ Concept → Context → Work Presentation
       width={3754}
       height={2835}
       frame="none"
-      className="w-4/5 my-10"
+      className="w-full"
     />
   </SectionColumn>
   <SectionColumn size={2}>
   </SectionColumn>
 </SplitSection>
 
+<SplitSection className="my-2 gap-2">
+  <SectionColumn size={3}>
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/box-front-2.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-full"
+    />
+  </SectionColumn>
+  <SectionColumn size={6}>
+    <MDXImage 
+      src="/projects/becoming/box-iso-1.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-full"
+    />
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
+
+<SplitSection className="my-2 gap-2">
+  <SectionColumn size={3}>
+  </SectionColumn>
+  <SectionColumn size={12}>
+    <MDXImage 
+      src="/projects/becoming/box-front-1.webp" 
+      alt="Hero" 
+      preset="header"
+      width={3754}
+      height={2835}
+      frame="none"
+      className="w-full"
+    />
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
 <SplitSection>
   <SectionColumn size={4}>
