more work in mdx art page, edited other components too

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -9,37 +9,16 @@ award: "Performance @ The International Conference on New Interfaces for Musical
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
-<ProjectHeader
-  title="Becoming"
-  description="An interactive audio-visual device responding to analog interaction and environmental stimuli."
->
-  <ProjectInfo
-    items={[
-      { label: "Tags", values: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"] },
-      { label: "Categories", values: ["dev", "art"] },
-      { label: "Role", values: ["Artist", "Developer"] },
-      { label: "Timeline", values: ["August 2024 - May 2025"] },
-      { label: "Team", values: ["Solo project"] },
-      { label: "Type", values: ["Audiovisual Installation"] },
-    ]}
-  />
-</ProjectHeader>
+<SplitSection className="text-xs font-mono">
+  Concept → Context → Media
+</SplitSection>
 
-Concept → Context → Work Presentation
-
-<SplitSection>
+<SplitSection className="text-xs font-mono">
   <SectionColumn size={3}>
-    ###### Background
+    ###### Becoming
+    audiovisual installation  |  2025
   </SectionColumn>
   <SectionColumn size={12}>
-    #### Becoming
-
-    <div className="text-lg">
-      An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
-    </div>
-
-    <br/><br/><br/>
-
     <MDXImage 
       src="/projects/becoming/projection-1.webp" 
       alt="Hero" 
@@ -54,110 +33,152 @@ Concept → Context → Work Presentation
   </SectionColumn>
 </SplitSection>
 
-<SplitSection>
-  <SectionColumn size={1}>
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/projection-2.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-4/5"
-    />
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/projection-3.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-4/5"
-    />
-  </SectionColumn>
-  <SectionColumn size={1}>
-  </SectionColumn>
-</SplitSection>
+<ProjectHeader
+  title="Becoming"
+  description="An interactive audio-visual device responding to analog interaction and environmental stimuli."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tools", values: ["Arduino", "Processing", "Hardware", "Sensors"] },
+      { label: "Role", values: ["Artist", "Developer"] },
+      { label: "Timeline", values: ["August 2024 - May 2025"] },
+      { label: "Team", values: ["Solo project"] },
+    ]}
+  />
+</ProjectHeader>
 
-<SplitSection>
-  <SectionColumn size={3}>
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/projection-2.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/projection-3.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SectionColumn>
-  <SectionColumn size={2}>
-  </SectionColumn>
-</SplitSection>
+<Section className="mt-20 w-full md:w-[85%] lg:w-[70%] ml-0 md:ml-15 lg:ml-45 text-sm">
+  Becoming’ recontextualizes a custom playable device as a living entity that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. Using adaptive animations and ambient soundscapes, the piece creates a volatile space that evokes thoughts of transformation, growth, and destruction. It tells the story of a machine grappling with fate and embraces human nature through the eyes of something artificial. 
+  
+  The visual component arises through layers upon layers of blood red lines that coalesce into abstract shapes, mirroring processes of growth and decay. The accompanying soundscape layers mechanical noises with ambient sounds like human voices from the surrounding space, emphasizing the tension between artificial systems and organic environments. Through its unpredictable behavior, the work challenges the audience to reflect on questions of agency, determinism, and the fluid nature of identity.
+  
+  <br/><br/><br/>
+  
+  <MDXImage 
+    src="/projects/becoming/projection-1.webp" 
+    alt="Hero" 
+    preset="header"
+    width={3754}
+    height={2835}
+    frame="none"
+    className="w-full"
+  />
+  <SplitSection className="my-2 mb-8 gap-2">
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/projection-2.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/projection-3.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
 
-<SplitSection className="my-2 gap-2">
-  <SectionColumn size={3}>
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/box-front-2.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SectionColumn>
-  <SectionColumn size={6}>
-    <MDXImage 
-      src="/projects/becoming/box-iso-1.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SectionColumn>
-  <SectionColumn size={2}>
-  </SectionColumn>
-</SplitSection>
+  <Section className="text-xs">
+    Analog device interface | 2025
+  </Section>
 
-<SplitSection className="my-2 gap-2">
-  <SectionColumn size={3}>
-  </SectionColumn>
-  <SectionColumn size={12}>
-    <MDXImage 
-      src="/projects/becoming/box-front-1.webp" 
-      alt="Hero" 
-      preset="header"
-      width={3754}
-      height={2835}
-      frame="none"
-      className="w-full"
-    />
-  </SectionColumn>
-  <SectionColumn size={2}>
-  </SectionColumn>
-</SplitSection>
+  <SplitSection className="my-2 gap-2">
+    <SectionColumn size={12}>
+      <MDXImage 
+        src="/projects/becoming/box-interact.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+
+  <SplitSection className="my-2 gap-2">
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/box-front-3.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/box-front-2.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/box-iso-1.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+  <SplitSection className="my-2 gap-2">
+    <SectionColumn size={12}>
+      <MDXImage 
+        src="/projects/becoming/box-front-1.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+  <SplitSection className="my-2 gap-2">
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/box-lighting-1.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+    <SectionColumn size={6}>
+      <MDXImage 
+        src="/projects/becoming/box-lighting-2.webp" 
+        alt="Hero" 
+        preset="header"
+        width={3754}
+        height={2835}
+        frame="none"
+        className="w-full"
+      />
+    </SectionColumn>
+  </SplitSection>
+</Section>
 
 <SplitSection>
   <SectionColumn size={4}>
@@ -200,22 +221,18 @@ Concept → Context → Work Presentation
     #### Impact
     This project has been selected for presentation at The International Conference on New Interfaces for Musical Expression (NIME), highlighting its contribution to the field of interactive music and art.
 
-    <br/><br/><br/>
-
-    #### Future Development
-    - Enhanced environmental sensing capabilities
-    - Multi-user interaction support
-    - Integration with machine learning for adaptive responses
-
-    <br/><br/><br/>
-
-    #### Media
-    ![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
-    
-    ![Becoming photo 3](/img/becoming3.png "Becoming photo 3")
-    
-    ![Becoming photo 4](/img/becoming4.png "Becoming photo 4")
   </SectionColumn>
   <SectionColumn size={2}>
   </SectionColumn>
 </SplitSection>
+
+<ProjectInfo
+    items={[
+      { label: "Tags", values: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Role", values: ["Artist", "Developer"] },
+      { label: "Timeline", values: ["August 2024 - May 2025"] },
+      { label: "Team", values: ["Solo project"] },
+      { label: "Type", values: ["Audiovisual Installation"] },
+    ]}
+  />
