--- a/content/projects/purdue-hackers.mdx
+++ b/content/projects/purdue-hackers.mdx
@@ -73,21 +73,27 @@ link: "https://www.purduehackers.com/"
       preset="project-documentation"
       width={2560}
       height={1664}
+      frame="none"
+      className="w-4/5"
     />
 
     <MDXImage 
       src="/projects/purdue-hackers/invitation.webp" 
       alt="Invitation" 
       preset="project-documentation"
+      width={2560}
+      height={1664}
       frame="mockup"
+      className="w-4/5 my-10"
     />
 
     <MDXImage
       src="/projects/purdue-hackers/hack-night_mac-air.webp" 
       alt="Hack night" 
       preset="project-documentation"
-      aspectRatio="2/3"
-      frame="rgb(233, 233, 233)"
+      frame="rgb(68, 68, 68)"  
+      className="w-full my-10"
+      baseImageClassName="aspect-1/2 rounded-lg"
     />
 
     <br/><br/><br/>
