added scroll indicator for articles

--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -16,7 +16,6 @@ link: "https://youtu.be/WGYg-UNLEUU"
 <SplitSection className="text-xs font-mono">
   <SectionColumn size={3}>
     ###### Becoming
-    audiovisual installation  |  2025
   </SectionColumn>
   <SectionColumn size={12}>
     <MDXImage 
@@ -35,7 +34,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
 
 <ProjectHeader
   title="Becoming"
-  description="An interactive audio-visual device responding to analog interaction and environmental stimuli."
+  description="Custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment."
 >
   <ProjectInfo
     items={[
@@ -53,7 +52,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
   The visual component arises through layers upon layers of blood red lines that coalesce into abstract shapes, mirroring processes of growth and decay. The accompanying soundscape layers mechanical noises with ambient sounds like human voices from the surrounding space, emphasizing the tension between artificial systems and organic environments. Through its unpredictable behavior, the work challenges the audience to reflect on questions of agency, determinism, and the fluid nature of identity.
   
   <br/><br/><br/>
-  
+
   <MDXImage 
     src="/projects/becoming/projection-1.webp" 
     alt="Hero" 
